Update example code snippets in the survey response structuring guide to include descriptive labels for each question type, enhancing clarity and context for users.

--- a/api-reference/others/structuring-survey-responses.mdx
+++ b/api-reference/others/structuring-survey-responses.mdx
@@ -23,7 +23,7 @@ Includes dropdowns, radio buttons, yes/no, and Likert scale questions.
     - **Question Field**: Provide the question text. If relevant, include all key answer options to help contextualize the selected answer.
     - **Answer Field**: Include the respondent’s selected choice as a string or number.
 
-```javascript
+```javascript Example interviewData object for a single-select question
 // Dropdown question
 {
     "questionId": "Q1",
@@ -57,7 +57,7 @@ Includes dropdowns, radio buttons, yes/no, and Likert scale questions.
     - **Question Field**: Include the full question text and scale labels (e.g., "1: Not at all, 10: Very much").
     - **Answer Field**: Include the respondent’s selected choice as a string or number.
 
-```javascript
+```javascript Example interviewData object for a NPS question
 {
     "questionId": "Q1",
     "question": "How likely are you to recommend our food delivery service to a friend or colleague - 1: Not at all, 10: Very much",
@@ -69,7 +69,7 @@ Includes dropdowns, radio buttons, yes/no, and Likert scale questions.
     - **Question Field**: Include the full question text and all possible answer options, separated by commas.
     - **Answer Field**: List all selected options, separated by commas.
 
-```javascript
+```javascript Example interviewData object for a checkbox question
 {
     "questionId": "Q1",
     "question": "Which of the following foods do you eat regularly? (You may select more than one.) - Chicken, Cheese, Bacon or sausage, Eggs, Fish or seafood, Plant-based meat substitutes (e.g., tofu, tempeh), Milk or dairy products, Fruits, Leafy vegetables (e.g., spinach, kale)",
@@ -82,7 +82,7 @@ These collect free-text input from respondents.
     - **Question Field**: Include only the question text.
     - **Answer Field**: Record the answer provided by the respondent.
 
-```javascript
+```javascript Example interviewData object for an open-ended question
 {
     "questionId": "Q1",
     "question": "Can you describe your typical eating habits during the week?",
@@ -144,7 +144,7 @@ Includes dropdowns, radio buttons, yes/no, and Likert scale questions.
     - **Question Field**: Provide the question text.
     - **Answer Field**: Include the respondent’s selected choice as a string or number.
 
-```javascript
+```javascript Example interviewData object for a single-select question
 // Dropdown question
 {
     "questionId": "Q1",
@@ -178,7 +178,7 @@ Includes dropdowns, radio buttons, yes/no, and Likert scale questions.
     - **Question Field**: Include the full question text and scale labels (e.g., "1: Not at all, 10: Very much").
     - **Answer Field**: Include the respondent’s selected choice as a string or number.
 
-```javascript
+```javascript Example interviewData object for a NPS question
 {
     "questionId": "Q1",
     "question": "How likely are you to recommend our food delivery service to a friend or colleague - 1: Not at all, 10: Very much",
@@ -190,7 +190,7 @@ Includes dropdowns, radio buttons, yes/no, and Likert scale questions.
     - **Question Field**: Include the full question text.
     - **Answer Field**: List all selected options, separated by commas.
 
-```javascript
+```javascript Example interviewData object for a checkbox question
 {
     "questionId": "Q1",
     "question": "Which of the following foods do you eat regularly? (You may select more than one.) - Chicken, Cheese, Bacon or sausage, Eggs, Fish or seafood, Plant-based meat substitutes (e.g., tofu, tempeh), Milk or dairy products, Fruits, Leafy vegetables (e.g., spinach, kale)",
@@ -203,7 +203,7 @@ These collect free-text input from respondents.
     - **Question Field**: Include only the question text.
     - **Answer Field**: Record the answer provided by the respondent.
 
-```javascript
+```javascript Example interviewData object for an open-ended question
 {
     "questionId": "Q1",
     "question": "Can you describe your typical eating habits during the week?",
