Add video tutorial for AI-Assisted Decipher Integration in the guide

--- a/integration-guides/decipher.mdx
+++ b/integration-guides/decipher.mdx
@@ -5,6 +5,15 @@ icon: "code"
 iconType: "regular"
 ---
 
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://youtu.be/mmtK4HspiEY"
+  title="AI-Assisted Decipher Integration"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+></iframe>
+
 ReDem’s Integration Assistant is designed to make setting up quality checks for new Decipher projects faster and easier. It helps identify and insert the correct quality scripts into your survey’s XML file, but manual review is still essential to ensure accuracy.
 
 <Steps titleSize="h3">
