Update video embed link for AI-Assisted Decipher Integration guide to use YouTube's embed format

--- a/integration-guides/decipher.mdx
+++ b/integration-guides/decipher.mdx
@@ -7,7 +7,7 @@ iconType: "regular"
 
 <iframe
   className="w-full aspect-video rounded-xl"
-  src="https://youtu.be/mmtK4HspiEY"
+  src="https://www.youtube.com/embed/mmtK4HspiEY?si=xfm93895QFvZZCEv"
   title="AI-Assisted Decipher Integration"
   frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
