Enhance data cleaning documentation with detailed explanations of quality checks, cleaning methods, and credit calculations. Clarify the scoring logic for grid questions and improve examples for better understanding.

--- a/features/cleaning-and-review.mdx
+++ b/features/cleaning-and-review.mdx
@@ -15,7 +15,7 @@ ReDem’s data cleaning feature automates and streamlines this process, providin
 
 Every respondent evaluated by ReDem undergoes a series of rigorous quality checks. These checks assign a score and categorize each response, forming the foundation of ReDem’s data cleaning process.
 
-ReDem offers two primary methods for cleaning your data::
+ReDem offers two primary methods for cleaning your data:
 
 ### ReDem Recommended Cleaning Settings
 
