--- a/knowledge-base/miscellaneous/redem-credits.mdx
+++ b/knowledge-base/miscellaneous/redem-credits.mdx
@@ -92,6 +92,8 @@ The following list provides a clear overview of how credits are calculated based
   * Covers up to 100 questions at a base cost of 4 credits per respondent.
   * For each additional question beyond 100, an extra 0.03 credits is charged.
 
+* **Credits are only charged when a respondent’s processing is successfully completed. If processing fails for any reason, no credits are charged.** 
+
 * **Credits are applied only to valid and available data points.**
 
 * **No credits are charged for blank or missing responses.**
