Update application changelog to reflect version 1.2.0 and enhance manual upload feature description with AI suggestions.

--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -5,7 +5,7 @@ icon: "bullhorn"
 iconType: "regular"
 ---
 
-<Update label="2025-09-19" description="Application updates">
+<Update label="2025-09-19" description="v1.2.0">
   ## Manual Upload: CSV and Excel with AI Suggestions
 
   You can now manually upload respondents from CSV (.csv) or Excel (.xlsx, .xls) files on the Import page. After uploading, the app provides AI-powered suggestions for the best quality checks to enable (e.g., BAS, OES, CHS, GQS, TS) based on your data.
