Update the application changelog.

--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -10,14 +10,8 @@ iconType: "regular"
 
   You can now manually upload respondents from CSV (.csv) or Excel (.xlsx, .xls) files on the Import page. After uploading, the app provides AI-powered suggestions for the best quality checks to enable (e.g., BAS, OES, CHS, GQS, TS) based on your data.
 
-  - Supported file types: <code>.csv</code>, <code>.xlsx</code>, <code>.xls</code>
+  - Supported file types: <code>.csv</code>, <code>.xlsx</code>
   - AI suggestions: recommends quality checks and pre-fills thresholds where applicable
-
-  ### How to use
-
-  1. Go to <code>Data Import → Manual Upload</code>
-  2. Choose CSV/Excel and map columns
-  3. Review AI suggestions and confirm
 
   ## Authentication: Letter Capitalization Fix
 
