Minor update to application changelog for release 1.2.0.

--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -8,10 +8,10 @@ iconType: "regular"
 <Update label="2025-09-19" description="v1.2.0">
   ## Manual Upload: CSV and Excel with AI Suggestions
 
-  You can now manually upload respondents from CSV (.csv) or Excel (.xlsx, .xls) files on the Import page. After uploading, the app provides AI-powered suggestions for the best quality checks to enable (e.g., BAS, OES, CHS, GQS, TS) based on your data.
+  You can now manually upload respondents from CSV (.csv) or Excel (.xlsx) files on the Import page. After uploading, the app provides AI-powered suggestions for the best quality checks to enable (e.g. OES, CHS, GQS, TS) based on your data.
 
   - Supported file types: <code>.csv</code>, <code>.xlsx</code>
-  - AI suggestions: recommends quality checks and pre-fills thresholds where applicable
+  - AI suggestions: recommends quality checks and pre-fills survey metadata (title, row indexes, missing values, etc.)
 
   ## Authentication: Letter Capitalization Fix
 
@@ -28,6 +28,5 @@ iconType: "regular"
   The Surveys page now loads the list in under 3 seconds for typical workspaces.
 
   - Optimized queries and pagination
-  - Deferred non-critical requests
   - Improved caching
 </Update>
