--- a/welcome.mdx
+++ b/welcome.mdx
@@ -26,12 +26,12 @@ Follow our step-by-step guide to understand [how ReDem works](/how-it-works).
     Discover the quality checks ReDem performs to ensure reliable and high-quality data.
   </Card>
 
-  {/* <Card title="Import your first survey data" icon="file-import" href="/features/data-import">
-    Begin by importing your first survey data into ReDem to get started.
-  </Card> */}
-
   <Card title="Explore the API Reference" icon="code" href="/api-reference">
     Check our API documentation to learn how to integrate ReDem with your survey tool.
+  </Card>
+
+  <Card title="Import your first survey data" icon="file-import" href="/features/manual-data-import">
+    Begin by importing your first survey data into ReDem to get started.
   </Card>
 
   <Card title="Discover Cleaning" icon="broom-wide" href="/knowledge-base/features/cleaning-and-review">
