Update documentation for file import feature, renaming sections and adjusting references. Introduce new 'File Import' guide with detailed instructions for manual and AI-assisted uploads. Update changelog to reflect changes in version 1.2.0.

--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -6,12 +6,14 @@ iconType: "regular"
 ---
 
 <Update label="2025-09-19" description="v1.2.0">
-  ## Manual Upload: CSV and Excel with AI Suggestions
+  ## File Import: CSV and Excel with AI Suggestions
 
   You can now manually upload respondents from CSV (.csv) or Excel (.xlsx) files on the Import page. After uploading, the app provides AI-powered suggestions for the best quality checks to enable (e.g. OES, CHS, GQS, TS) based on your data.
 
   - Supported file types: <code>.csv</code>, <code>.xlsx</code>
   - AI suggestions: recommends quality checks and pre-fills survey metadata (title, row indexes, missing values, etc.)
+
+  👉 [Read the full guide](/features/file-import)
 
   ## Authentication: Letter Capitalization Fix
 
