--- a/features/file-import.mdx
+++ b/features/file-import.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Manual Data Import'
+title: 'File Import'
 description: 'Learn how to upload your survey data in ReDem'
 icon: "file-import"
 iconType: "regular"
