--- a/welcome.mdx
+++ b/welcome.mdx
@@ -30,8 +30,8 @@ Follow our step-by-step guide to understand [how ReDem works](/how-it-works).
     Check our API documentation to learn how to integrate ReDem with your survey tool.
   </Card>
 
-  <Card title="Import your first survey data" icon="file-import" href="/features/manual-data-import">
-    Begin by importing your first survey data into ReDem to get started.
+  <Card title="Import your first file" icon="file-import" href="/features/file-import">
+    Begin by importing your first file into ReDem to get started.
   </Card>
 
   <Card title="Discover Cleaning" icon="broom-wide" href="/knowledge-base/features/cleaning-and-review">
