Refactor documentation structure by renaming changelog references and introducing a new API Change Log file. Remove outdated changelog file to streamline documentation.

--- a/changelogs/api-change-log.mdx
+++ b/changelogs/api-change-log.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Change Log'
+title: 'API Change Log'
 description: 'Stay updated on the latest changes and improvements in the API.'
 icon: "bullhorn"
 iconType: "regular"
