Update application changelog to include new features in version 1.2.1, detailing the interactive BAS Typing Behavior Chart and the dedicated Cleaning tab for respondent details.

--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -5,6 +5,22 @@ icon: "bullhorn"
 iconType: "regular"
 ---
 
+<Update label="2025-09-29" description="v1.2.1">
+  ## Respondent Details: BAS Typing Behavior Chart
+
+  The BAS tab now displays an interactive chart of a respondent’s typing behavior for the question.
+
+  - Visualizes bursts, pauses, and total time; includes the typed text
+  - Hover or tap for moment-by-moment details
+  - Clicking on the BAS score or typing behavior of a respondent in the table opens this tab directly
+
+  ## Respondent Details: Cleaning Tab
+
+  A dedicated Cleaning tab now shows all cleaning information for a single respondent.
+
+  - Clicking “Status” or “Reason for Exclusion” opens this tab directly
+</Update>
+
 <Update label="2025-09-19" description="v1.2.0">
   ## File Import: CSV and Excel with AI Suggestions
 
