Update application changelog to include new features in version 1.2.2, highlighting the addition of bulk cleaning functionality and an improved file import user experience with a progress bar.

--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -5,6 +5,13 @@ icon: "bullhorn"
 iconType: "regular"
 ---
 
+<Update label="2025-10-07" description="v1.2.2">
+  ## Bulk Cleaning and File Import UX
+
+  - Bulk cleaning: New backend endpoint and UI to clean all respondents from the survey results page with reusable settings.
+  - File import: Immediate progress bar after confirmation showing the total respondents being processed.
+</Update>
+
 <Update label="2025-09-29" description="v1.2.1">
   ## Respondent Details: BAS Typing Behavior Chart
 
