Implement new API endpoints for deleting respondents and surveys
- Added `POST /v2/deleteRespondents` to remove one or more respondents and their related data.
- Added `POST /v2/deleteSurveys` to delete one or more surveys and all associated data.
- Updated documentation in `docs.json` and created markdown files for both endpoints.
- Updated changelogs to reflect these new features.

--- a/changelogs/api-change-log.mdx
+++ b/changelogs/api-change-log.mdx
@@ -5,6 +5,15 @@ icon: "bullhorn"
 iconType: "regular"
 ---
 
+<Update label="2025-10-22" description="v2.1.0">
+  ## New Endpoints: Delete Surveys and Delete Respondents
+
+  - `POST /v2/deleteRespondents`: Delete one or more respondents from a survey and clean up related data.
+  - `POST /v2/deleteSurveys`: Delete one or more surveys and all associated data.
+
+  See the endpoint docs for request/response details.
+</Update>
+
 <Update label="2025-06-16" description="v2">
   ## API v2 Released: Consistent CHS Question IDs Supported
 
