--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -5,6 +5,24 @@ icon: "bullhorn"
 iconType: "regular"
 ---
 
+<Update label="2025-10-22" description="v1.2.3">
+  ## Manual Data Import
+
+  - Allowed using survey language columns to set allowed languages for OES data points during manual imports.
+
+  ## UX & Interface
+
+  - Survey Update: Add new data records to surveys directly from the survey results page, improving imports for multi-wave surveys.
+
+  ## Delete Features
+
+  - New feature for deleting respondents and surveys.
+
+  ## Integrations & Monitoring
+
+  - Public-facing status page for ReDem 3.0 API & Application providing real-time availability and health monitoring.
+</Update>
+
 <Update label="2025-10-07" description="v1.2.2">
   ## Bulk Cleaning and File Import UX
 
