Update text for questionnaire language selection feature.

--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -8,7 +8,7 @@ iconType: "regular"
 <Update label="2025-10-22" description="v1.2.3">
   ## Manual Data Import
 
-  - Allowed using survey language columns to set allowed languages for OES data points during manual imports.
+  - It is now possible to specify a questionnaire language column to set allowed languages for OES data points during manual imports.
 
   ## UX & Interface
 
