Add sections for updating imported data and editing cleaning settings in file-import documentation

--- a/features/file-import.mdx
+++ b/features/file-import.mdx
@@ -148,3 +148,47 @@ Follow these steps for a manual upload:
     Once everything is correct, **approve and upload your data** to complete the process.
   </Step>
 </Steps>
+
+## Updating Imported Data
+
+Use this flow to add new interviews to an existing import without reprocessing previously uploaded records.
+
+<Steps titleSize="h3">
+  <Step title="Select your survey">
+    In the Surveys section, open the data file you want to update.
+  </Step>
+  <Step title="Add data records">
+    Click the green "+ Add Data Records" button in the top-left to open the Upload Data File screen again.
+  </Step>
+  <Step title="Upload the updated file">
+    Choose the file that contains additional interviews from the same survey and click "Proceed to Review".
+    You may upload all interviews (previous + new) or only the new interviews. Existing interviews are automatically detected and skipped; only new interviews are uploaded.
+  </Step>
+  <Step title="Check key settings">
+    - Verify the Survey Metadata is correct.
+    - Review the Respondent ID to ensure proper matching.
+    - Confirm the Quality Checks are set as intended.
+  </Step>
+  <Step title="Review summary">
+    Before confirming, a summary will show how many new interviews will be added and the associated credit cost. Only new interviews consume credits.
+  </Step>
+  <Step title="Confirm the update">
+    Approve to update your survey with the new interviews.
+  </Step>
+</Steps>
+
+## Edit and Reapply Cleaning Settings
+
+After you have cleaned a file, you can adjust and reapply your cleaning settings at any time.
+
+<Steps titleSize="h3">
+  <Step title="Open Cleaning Settings">
+    On your survey results page, click the "Cleaning Settings" button at the top.
+  </Step>
+  <Step title="Adjust settings">
+    Modify the cleaning parameters as desired.
+  </Step>
+  <Step title="Reapply cleaning">
+    Click "Apply Cleaning" to recalculate your results using the updated settings.
+  </Step>
+</Steps>
