Update application changelog for v1.2.4 with UI improvements and CHS quality enhancements

--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -5,6 +5,17 @@ icon: "bullhorn"
 iconType: "regular"
 ---
 
+<Update label="2025-10-25" description="v1.2.4">
+  ## UX & Interface
+
+  - Various small UI improvements across the application.
+  - Survey Update: UX improvements to streamline updating surveys.
+
+  ## Quality Checks: CHS
+
+  - Reduced CHS Quality Score errors by hardening parsing and validation.
+</Update>
+
 <Update label="2025-10-22" description="v1.2.3">
   ## Manual Data Import
 
